force-app/main/default/objects/synety__PrePopulation_Filter_Criteria1__c/synety__PrePopulation_Filter_Criteria1__c.object-meta.xml
<CustomObject>
    <label>CloudCall PrePopulation Filter Criteria</label>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CloudCall PrePopulation Filter Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>