force-app/main/default/objects/synety__PrePopulation_Filter_Criteria1__c/fields/synety__Criteria_Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>synety__Criteria_Sequence_Number__c</fullName>
    <label>Criteria Sequence Number</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>