force-app/main/default/objects/synety__PrePopulation_Filter_Criteria1__c/fields/synety__Field_Type__c.field-meta.xml
<CustomField>
    <fullName>synety__Field_Type__c</fullName>
    <label>Field Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>