force-app/main/default/objects/synety__PrePopulation_Filter_Criteria1__c/fields/synety__Field_Value__c.field-meta.xml
<CustomField>
    <fullName>synety__Field_Value__c</fullName>
    <label>Field Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>