force-app/main/default/objects/synety__PrePopulation_Filter_Criteria1__c/fields/synety__sObject_Name__c.field-meta.xml
<CustomField>
    <fullName>synety__sObject_Name__c</fullName>
    <label>Object Name</label>
    <referenceTo>synety__PrePopulation_Object__c</referenceTo>
    <relationshipLabel>CloudCall PrePopulation Filter Criteria</relationshipLabel>
    <relationshipName>CloudCall_PrePopulation_Filter_Criteria1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>